maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBaggle){
    if(estFaceMur()){droite()}
    else {
      if(isWallL()){avance()}
    }
  }
}


def isWallL(): Boolean={
  var rep= false
  gauche()
  if (estFaceMur){rep=true}
  droite()
  return rep
}


